--- a/ansible/dbscript.yaml
+++ b/ansible/dbscript.yaml
@@ -1,82 +1,104 @@
 ---
-- hosts: database
+- name: Configure the server, Download the files from Github
+  hosts: database
   vars:
     ansible_become_pass: "password"
-    database_name: "pullout"
-    database_user: "admin"
-    ansible_ssh_pipelining: true # Allow creation of temporary files on remote machine, else postgresql_user module will fail
+    mysql_root_password: "123"
+    mysql_db_name: "remote"
+    mysql_user: "sasha"
+    mysql_user_password: "123"
+    sql_file_path: "/home/olmo9929/remote-med.sql"  # Шлях до SQL-файлу
+    mysql_bind_address: "0.0.0.0"  # Дозволяє підключення з інших IP-адрес
 
   tasks:
-    - name: Update apt cache
-      apt:
-        update_cache: yes
+    - name: 0. Check the connection
+      ping:
+
+    - name: Ensure the directory /var/lib/apt exists
       become: true
+      file:
+        path: "/var/lib/apt"
+        state: directory
+        owner: root
+        group: root
+        mode: "0755"
 
-    - name: 2. Installing packages
+    - name: Ensure the directory /var/lib/apt/lists exists
+      become: true
+      file:
+        path: "/var/lib/apt/lists"
+        state: directory
+        owner: root
+        group: root
+        mode: "0755"
+
+    - name: Ensure the directory /var/lib/apt/lists/partial exists
+      become: true
+      file:
+        path: "/var/lib/apt/lists/partial"
+        state: directory
+        owner: root
+        group: root
+        mode: "0755"
+
+    - name: 1. Update Ubuntu
+      become: true
+      shell: apt-get update
+
+    - name: 6. Install MySQL and create a database
+      become: true
       apt:
-        pkg:
-          - postgresql
-          - postgresql-contrib
-          - python3-psycopg2
-          - git
+        name: "{{ item }}"
         state: present
-        update-cache: yes
-      become: yes
-    
-    - name: Cloning repository
-      git:
-        repo: https://git.mif.vu.lt/sest8864/web.git
-        dest: "home/pullout"
-        single_branch: yes
-        version: master
+      with_items:
+        - mysql-client
+        - mysql-server
 
-    - name: Starting PostgreSQL service
+    - name: 6.1.2. Install python3-mysqldb
+      become: true
+      apt:
+        name: python3-mysqldb
+        state: present
+
+    - name: 6.2. Ensure MySQL service is running
+      become: true
       service:
-        name: postgresql
+        name: mysql
         state: started
-      become: yes
+        enabled: yes
 
-    - name: Creating pullout database
-      postgresql_db:
-        state: present
-        name: "{{ database_name }}"
+    - name: 6.3. Create MySQL database
       become: true
-      become_user: postgres
-
-    - name: 6. Creating user for PostgreSQL
-      postgresql_user:
-        db: "{{ database_name }}" # Default database when user write "psql" in terminal
-        name: "{{ database_user }}"
-        password: "password"
-        encrypted: yes
-        role_attr_flags: SUPERUSER
-      ignore_errors: yes
-      become: yes
-      become_user: postgres
-
-    - name: Checking what version is PostgreSQL in /etc/postgresql
-      command: ls /etc/postgresql
-      register: pg_version
-    
-    - name: Making PostgreSQL listen to remote machines
-      lineinfile:
-        path: /etc/postgresql/{{ pg_version['stdout'] }}/main/postgresql.conf
-        regexp: '^#?listen_addresses = .*'
-        line: "listen_addresses = '*'"
+      mysql_db:
+        name: "{{ mysql_db_name }}"
         state: present
-      become: yes
-      environment:
-        ANSIBLE_REMOTE_TEMP: /tmp
-      
-    - name: 9. Adding "{{ database_user }}" user to pg_hba.conf connect from any ip
-      lineinfile:
-        path: /etc/postgresql/{{ pg_version['stdout'] }}/main/pg_hba.conf
-        line: "host all {{ database_user }} 0.0.0.0/0 md5"
-        insertafter: EOF
-      become: yes
+      vars:
+        login_user: root
+        login_password: "{{ mysql_root_password }}"
 
-    - name: 10. Restarting PostgreSQL
-      service:
-        name: postgresql
-        state: restarted
-      become: yes
+    - name: 6.4. Create MySQL user
+      become: true
+      mysql_user:
+        name: "{{ mysql_user }}"
+        password: "{{ mysql_user_password }}"
+        priv: "{{ mysql_db_name }}.*:ALL"
+        host: "{{ mysql_bind_address }}"
+        state: present
+      vars:
+        login_user: root
+        login_password: "{{ mysql_root_password }}"
+
+    - name: 7. Clone a public repository
+      become: true
+      shell: git clone https://git.mif.vu.lt/sest8864/web.git /var/www/html/web
+
+    - name: 8. Copy remote-med.sql to the specified path
+      become: true
+      copy:
+        src: "/var/www/html/web/remote-med.sql"
+        dest: "{{ sql_file_path }}"
+        remote_src: yes
+
+    - name: 9. Load data from remote-med.sql to MySQL database
+      become: true
+      shell: mysql -u sasha -p{{ mysql_user_password }} -h {{ mysql_bind_address }} {{ mysql_db_name }} < {{ sql_file_path }}
