--- a/ansible/webserver.yml
+++ b/ansible/webserver.yml
@@ -1,20 +1,13 @@
 ---
 - name: Configure the server, Download the files from Github
-  hosts: database
+  hosts: webservers
   vars:
     ansible_become_pass: "password"
-    mysql_root_password: "123"
-    mysql_db_name: "remote"
-    mysql_user: "sasha"
-    mysql_user_password: "123"
-    sql_file_path: "/usr/games/web/remote-med.sql"  # Шлях до SQL-файлу
-    mysql_bind_address: "0.0.0.0"  # Дозволяє підключення з інших IP-адрес
-
   tasks:
     - name: 0. Check the connection
       ping:
 
-    - name: 1. Ensure the directory /var/lib/apt exists
+    - name: Ensure the directory /var/lib/apt exists
       become: true
       file:
         path: "/var/lib/apt"
@@ -23,7 +16,7 @@
         group: root
         mode: "0755"
 
-    - name: 2. Ensure the directory /var/lib/apt/lists exists
+    - name: Ensure the directory /var/lib/apt/lists exists
       become: true
       file:
         path: "/var/lib/apt/lists"
@@ -32,7 +25,7 @@
         group: root
         mode: "0755"
 
-    - name: 3. Ensure the directory /var/lib/apt/lists/partial exists
+    - name: Ensure the directory /var/lib/apt/lists/partial exists
       become: true
       file:
         path: "/var/lib/apt/lists/partial"
@@ -41,69 +34,42 @@
         group: root
         mode: "0755"
 
-    - name: 4. Update Ubuntu
+    - name: 1. Update Ubuntu
       become: true
       shell: apt-get update
 
-    - name: 5. Install MySQL and create a database
+    - name: 2.1. Install Apache2
       become: true
-      apt:
-        name: "{{ item }}"
-        state: present
+      apt: name=apache2 state=latest
+
+    - name: 2.2. Install PHP
+      become: true
+      apt: name=libapache2-mod-php state=present
+
+    - name: 2.3. Install PHP modules
+      become: true
+      apt: name=php-pgsql state=present
+
+    - name: 2.4. Install PHP mysqli extension
+      become: true
+      apt: name=php-mysqli state=present
+
+    - name: 3. Remove all files and directories from /var/www/html
+      become: true
+      file:
+        state: "{{ item }}"
+        path: "/var/www/html"
+        owner: root
+        group: root
+        mode: "0755"
       with_items:
-        - mysql-client
-        - mysql-server
+        - absent
+        - directory
 
-    - name: 6. Install python3-mysqldb
-      become: true
-      apt:
-        name: python3-mysqldb
-        state: present
-
-    - name: 7. Ensure MySQL service is running
-      become: true
-      service:
-        name: mysql
-        state: started
-        enabled: yes
-
-    - name: 8. Create MySQL database
-      become: true
-      mysql_db:
-        name: "{{ mysql_db_name }}"
-        state: present
-      vars:
-        login_user: root
-        login_password: "{{ mysql_root_password }}"
-
-    - name: 9. Create MySQL user
-      become: true
-      mysql_user:
-        name: "{{ mysql_user }}"
-        password: "{{ mysql_user_password }}"
-        priv: "{{ mysql_db_name }}.*:ALL"
-        host: "%"
-        state: present
-      vars:
-        login_user: root
-        login_password: "{{ mysql_root_password }}"
-
-    - name: 10. Install Git on the web server
+    - name: 4. Install Git
       become: true
       apt: name=git state=latest
 
-    - name: 11. Clone a public repository
+    - name: 5. Clone a public repository
       become: true
-      shell: git clone https://git.mif.vu.lt/sest8864/web.git /usr/games/web
-
-    - name: 12. Copy data from remote-med.sql to MySQL database
-      become: true
-      shell: mysql -u root -p{{ mysql_root_password }} -D {{ mysql_db_name }} < {{ sql_file_path }}
-
-    - name: 13. Set bind-address in mysqld.cnf
-      become: true
-      lineinfile:
-        path: "/etc/mysql/mysql.conf.d/mysqld.cnf"
-        line: "bind-address = {{ mysql_bind_address }}"
-      notify:
-        - restart mysql
+      shell: git clone https://git.mif.vu.lt/sest8864/web.git /var/www/html/web
